# CLIR_benchmark

./: .env.example  .gitignore  README.md  clir.toml  pyproject.toml
attic/: README.md  add_passages_to_qac_sample.py  analyze_human_vs_llm.py  combine_qa_questions.py  data_audit.py  export_qac_for_excel.py  generate_extra_qac.py  generate_zh_extra_qac.py  ipc_distribution.py  option_a_english_first_qa.py  patch_alias_graph_hf_source.py  pilot_epo_smallest.py  plot_human_score_distribution.py  qa_generation_model_comparison.py  regen_analysis_drop_gte.py  regrade_with_openrouter.py  translate_model_comparison.py  translate_to_chinese.py
docs/: ARCHITECTURE.md  MIGRATION.md  PIPELINE_STEPS.md
src/clir_bench/: __init__.py
src/clir_bench/analysis/: confusion.py  predictions.py  questions.py  rankings.py  rescore.py  tables.py
src/clir_bench/cli/: __init__.py  analyze.py  corpus.py  evaluate.py  ingest.py  meta.py  publish.py  qac.py  runs.py
src/clir_bench/core/: __init__.py  config.py  context.py  corpus.py  domain.py  grading.py  ingest.py  llm.py  parallel.py  paths.py  prompts.py  publish.py  qagen.py  runs.py  text.py
src/clir_bench/domains/: __init__.py
src/clir_bench/domains/chem_patents/: __init__.py  attribution.py  cli.py  domain.py  schema.py  vocabulary.py
src/clir_bench/domains/chem_patents/aliasgraph/: builder.py  chebi.py  concept_qa.py  matching.py  names.py  publish.py  wikidata.py
src/clir_bench/evaluation/: harness.py  metrics.py  models.py
tests/: test_architecture.py  test_core_semantics.py  test_domain_contract.py
(+26 files in other folders)
