[project]
name = "clir-benchmark"
version = "0.1.0"
description = "Domain-pluggable pipeline for building and evaluating multilingual CLIR benchmarks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.9",
]

# Heavy, source-specific and evaluation-only stacks are opt-in so a laptop never
# has to install torch. The cluster runs `uv sync --extra eval`.
[project.optional-dependencies]
eval = [
    "mteb>=2.12.15",
    "pytrec-eval-terrier>=0.5.10",
    "sentence-transformers>=5.3.0",
    "pylate>=1.1.4",
    "einops>=0.8.2",         # required by jinaai/jina-* custom modeling code
    "sentencepiece>=0.2.1",  # required to build SapBERT's XLM-R tokenizer
]
chem = [
    "networkx>=3.0",         # ChEBI is_a graph
    "google-cloud-bigquery>=3.0.0",  # Google Patents extraction
    "stream-unzip>=0.0.96",  # EPO BDDS archive streaming
]
all = ["clir-benchmark[eval,chem]"]

[project.scripts]
clir = "clir_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clir_bench"]

[tool.hatch.build.targets.wheel.force-include]
# Prompt files are package data, loaded via importlib.resources (no path hacks).
"src/clir_bench/domains" = "clir_bench/domains"

[tool.pytest.ini_options]
testpaths = ["tests"]
